<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="stGechterPress_InOuts" Id="{f8691f36-e5e2-453b-896a-a3bfeedb55b6}">
    <Declaration><![CDATA[TYPE stGechterPress_InOuts :
STRUCT
	bMachinePowerON			AT %I*: BOOL;	
	bPressureSensor			AT %I*: BOOL;	
	bWorkPermition_Q		AT %Q*: BOOL;	
	iPistonPosition			AT %I*: INT;	
	bPistonPositionError	AT %I*: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>